--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -11,15 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.generate-ddl=false
-spring.jpa.open-in-view=false
-
-# SQL 초기화 설정 제거 또는 수정
-spring.sql.init.mode=never
-
-# JWT Configuration
-jwt.secret=your_jwt_secret_key_here_make_it_long_and_secure_at_least_256_bits
-jwt.expiration=86400000
 
 # Server Configuration
 server.port=8080
@@ -30,4 +21,4 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=300000
 
 # Hibernate 스키마 업데이트 로깅 추가
-logging.level.org.hibernate.tool.schema=DEBUG
+logging.level.org.hibernate.tool.schema=ERROR
